--- a/socailNetworkApp.vcxproj.filters
+++ b/socailNetworkApp.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="my_utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="reversal.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="programming.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -34,6 +31,51 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Cats.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="polymorphic_activiites.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="my_bolt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyApplication.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="linked_list.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sorting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="graph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OOPs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Stack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Queue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Smart_Pointers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="d_linked_list.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,13 +92,25 @@
     <ClInclude Include="My_Threads.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="helper_classes.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="reversal.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Cats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="my_project_app.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="my_bolt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MyApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="linked_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sorting.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
